# phyllanthus_emblica

./: .gitignore  CMakeLists.txt  LICENSE  README.md  Untitled-2.cpp  alphagrp_latency.cpp  alphagrp_latency_new.cpp  circ_buff.cpp  conanfile.py  futurefirst.cpp  img  lru_cache.cpy  optive.cpp  quantbox_round1.cpp
aargo_trade/: CMakeLists.txt
amazon_embedded/: CMakeLists.txt  OrderBatchSerializer.cpp  serializer.cpp
extras/: TestParserInput.txt  Untitled-2.cpp  alphagrp_latency.cpp  optive.cpp  quantbox_round1.cpp
factomind/: CMakeLists.txt  README.md  problem_statement.txt  simulator.cpp  testfile.txt
factomind/.cache/clangd/index/: main.cpp.024556DAEE6A5FE7.idx
factomind/cfg/: config.yaml
factomind/config/: config.yaml
factomind/lib/: CMakeLists.txt
factomind/lib/csv-parser/: csv.hpp
factomind/libraries/: CMakeLists.txt  LIBREADME.md
factomind/libraries/config_parser/: ConfigParser.h
factomind/libraries/data_reader/: CMakeLists.txt
factomind/libraries/data_writer/: CMakeLists.txt  OutputWriter.h
factomind/libraries/strats/: CMakeLists.txt
factomind/program/: CMakeLists.txt  cfg_parser.cpp  simulator.cpp
factomind/programs/: CMakeLists.txt  ConfigParser.cpp  ConfigParser.h  main.cpp  simulator.cpp
falconx/: README.md
flipkart/AdvertisementCappingSystem/: CMakeLists.txt  problem.txt  sample.json
flipkart/AdvertisementCappingSystem/inc/: CMakeLists.txt  CampaignProcessor.h
flipkart/AdvertisementCappingSystem/lib/: CMakeLists.txt
flipkart/AdvertisementCappingSystem/src/: CMakeLists.txt  main.cpp
futurefirst/: CMakeLists.txt  README.md
goldman_sachs/: CMakeLists.txt  largestTreeinForest.cpp
greenland_investment_mgmt/: 02_message_delivery_test.txt  k_smallest_substring.cpp  mortgage.cpp  task_sch_input.txt  task_scheduler.cpp  text_wrapper.cpp
hsbc/: main.cpp
imc/: CMakeLists.txt  README.md  rock_paper_scissor.cpp
imc/problem_2_concurrent_queue/: CMakeLists.txt
imc/problem_2_concurrent_queue/.cache/clangd/index/: ConcurrentQueue.cpp.8937EEF283BED48A.idx
interview-experience/: CMakeLists.txt
interview-experience/aargo_trade/: main.cpp
interview-experience/amazon_embedded/: CMakeLists.txt  deserializer.cpp  orderbatch.cpp
interview-experience/edgeverve/: CMakeLists.txt  suffixQueries.cpp
interview-experience/factomind/: CMakeLists.txt
interview-experience/factomind/input_files/: SampleInput.csv
interview-experience/factomind/libraries/: CMakeLists.txt
interview-experience/factomind/libraries/common/: CMakeLists.txt  TimeSeriesData.cpp  TimeSeriesData.h  Utils.h
interview-experience/factomind/libraries/config_parser/: ConfigParser.cpp
interview-experience/factomind/libraries/data_reader/: DataReader.cpp  DataReader.h
interview-experience/factomind/libraries/data_writer/: OutputWriter.cpp
interview-experience/factomind/libraries/strats/: Simulator.cpp  Simulator.h  TradingAlgo.cpp  TradingAlgo.h  TradingStrategy.cpp  TradingStrategy.h
interview-experience/factomind/programs/: CMakeLists.txt
interview-experience/flipkart/AdvertisementCappingSystem/: input.json
interview-experience/fractal_prot/: lenCalc.py
interview-experience/futurefirst/: main.cpp
interview-experience/futurefirst/docs/: futurefirst_asgnmt.docx
interview-experience/goldman_sachs/: largestTreeinForest.cpp
interview-experience/greenland_investment_mgmt/: CMakeLists.txt  malware_spread.cpp  mortgage.cpp  task_scheduler.cpp  throttling_api.cpp
interview-experience/imc/: CMakeLists.txt
interview-experience/imc/concurrent_queue/: CMakeLists.txt  ConcurrentQueue.cpp
interview-experience/imc/rock_paper_scissor/: main.cpp  rps.cpp
interview-experience/jpmc/: jpmctest.cpp
interview-experience/jstreet/: main.cpp
interview-experience/jump_trading/: CMakeLists.txt  TextParser.cpp
interview-experience/lhft/: problem_statement.md
interview-experience/millenium/: ticker_parser.cpp
interview-experience/miscellaneous/: CMakeLists.txt  sparsemat.cpp  total-liquid-filled.cpp  totalliquid.cpp
interview-experience/ogha/: CMakeLists.txt
interview-experience/ogha/01_nearest_pair/: CMakeLists.txt
interview-experience/ogha/03_version_queue/: VersionQueue.H  VersionQueue.cpp  vqmain.cpp
interview-experience/optiver/: CMakeLists.txt  graph_traversal.cpp
interview-experience/qnance/: CMakeLists.txt  README.md  conditional_variable.cpp  main01.cpp  my_vector_impl.cpp
interview-experience/squarepoint-capital/: CMakeLists.txt  accumulator.cpp  accumulator2.cpp  anagram_count.cpp  mt_processor.cpp
interview-experience/standard_chartered/: solve.cpp
interview-experience/tower_research_capital/: road_network.cpp
interview-experience/tower_research_capital/input_files/: rn_input1.txt  rn_input2.txt
interview-experience/trading_technologies/: main.cpp
interview-experience/worldquant/: CMakeLists.txt
job-interviews/: Headlands submission form.docx
jpmc/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  jpmcqra2.cpp  jpmctest.cpp  targ
jump_trading/: CMakeLists.txt  TestParser.cpp  input.txt
lhft/: CMakeLists.txt  main.cpp
millenium/: CMakeLists.txt  README.md  ticker_parser.cpp
miscellaneous/: CMakeLists.txt  find_scrambled.cpp  totalliquid.cpp
ogha/: CMakeLists.txt  README.md  nearest_pair.cpp  split_file00.cpp  split_file01.cpp  version_queue.cpp
optiver/: graph_traversal.cpp  input.txt
playground/: CMakeLists.txt  boost_ipc.cpp
playground/playground_extra/: CMakeLists.txt  asio_usage.cpp  boost_asio.cpp  boost_usage.cpp  capnproto_usage.cpp  cereal_usage.cpp  comm_infra.cpp  crtp.cpp  cryptopp_usage.cpp  fmt_usage.cpp  folly_usage.cpp  magic_enum_usage.cpp  nlohmann_usage.cpp  spdlog_usage.cpp  tracy_example.cpp  tracy_usage.cpp  virtual_funcs.cpp  yaml_config_obj.cpp  yaml_usage.cpp
qnance/: main02.cpp  my_vector_impl.cpp
squarepoint-capital/: CMakeLists.txt  accumulator2.cpp  mt_processor.cpp
squarepoint_capital/: CMakeLists.txt  mt_processor.cpp
stan_chart/: CMakeLists.txt  solve.cpp  solve1.cpp
standard_chartered/: CMakeLists.txt
tower_research_capital/: CMakeLists.txt  (+2 more)
(+668 files in other folders)
