add_subdirectory(jump_trading)
add_subdirectory(goldman_sachs)
add_subdirectory(tower_research_capital)
add_subdirectory(optiver)
add_subdirectory(trading_technologies)
add_subdirectory(standard_chartered)
add_subdirectory(squarepoint-capital)
add_subdirectory(millenium)
add_subdirectory(edgeverve)
add_subdirectory(imc)
add_subdirectory(jpmc)
add_subdirectory(aargo_trade)
# add_subdirectory(ogha) add_subdirectory(factomind)
# add_subdirectory(greenland_investment_mgmt) add_subdirectory(alphagrep)
# add_subdirectory(lhft) add_subdirectory(amazon_embedded)
# add_subdirectory(miscellaneous) add_executable(greenland circ_buff.cpp)

# @TODO: 1-> review goldman_sachs, trc, sc, imc, jpmc 1-> solve jump, lhft,
# trading_tech, sq_capital etc 2-> add amazon_embedded, edgeverve, miscellaneous
# directories to the build remove flipkart's problem.
